samples/_failures_safe/1761193096_20530b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_006edceb.c: In function ‘display_stats’:
./samples/SAFE/__tmp_006edceb.c:120:50: error: ‘const struct LogStats’ has no member named ‘warning’
  120 |     printf("Warning count: %d\n", analyzer->stats.warning
      |                                                  ^
./samples/SAFE/__tmp_006edceb.c:120:58: error: expected ‘)’ at end of input
  120 |     printf("Warning count: %d\n", analyzer->stats.warning
      |           ~                                              ^
      |                                                          )
./samples/SAFE/__tmp_006edceb.c:120:5: error: expected declaration or statement at end of input
  120 |     printf("Warning count: %d\n", analyzer->stats.warning
      |     ^~~~~~
